# ICS2-10-MeowLab

./: Cargo.toml  README.md  hyperfine_1.18.0_amd64.deb  main.py  meowlab.ipynb  pyproject.toml
src/: mycat1.rs  mycat2.rs  mycat3.rs  mycat4.rs  mycat5.rs  mycat6.rs
